adding LCU instruction encoding/decoding

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "cc1a7039",
+   "execution_count": 160,
+   "id": "b55c1740",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3b1029",
+   "id": "a30d5495",
    "metadata": {},
    "source": [
     "### KERNEL CONFIGURATION\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0ae9e5e7",
+   "id": "6fd42a6d",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "55dc4290",
+   "id": "cac43319",
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,75 @@
     "print(\"Hex representation: \" + kmem.get_word_in_hex(kmem_pos))\n",
     "kmem.get_kernel_info(kmem_pos)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e683fb5",
+   "metadata": {},
+   "source": [
+    "### Loop Control Unit IMEM "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "e28cc2d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Immediate value: 0\n",
+      "LCU is in loop control mode\n",
+      "Performing ALU operation SSUB between operands SRF and ONE\n",
+      "Writing ALU result to LCU register 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load an existing imem word and decode it\n",
+    "imem_pos = 1\n",
+    "imem_word = 0x9c500\n",
+    "\n",
+    "lcu_imem = LCU_IMEM()\n",
+    "lcu_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "lcu_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "b6bab804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hex representation: 0xdc383\n",
+      "Immediate value: 3\n",
+      "LCU is in loop control mode\n",
+      "Performing ALU operation SADD between operands ZERO and ONE\n",
+      "Writing ALU result to LCU register 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a new kernel\n",
+    "imem_pos = 2\n",
+    "lcu_imem.set_kernel_params(imm=3, rf_wsel=2, rf_we=1, alu_op=1, br_mode=0, muxb_sel=7, muxa_sel=6, pos=imem_pos)\n",
+    "print(\"Hex representation: \" + lcu_imem.get_word_in_hex(imem_pos))\n",
+    "lcu_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ec34ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
