--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -2,29 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "5e0a478f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import numpy as np\n",
     "import pandas as pd \n",
     "import sys, os\n",
-    "sys.path.append(os.path.abspath('src'))\n",
-    "from src.ker_conf import *\n",
-    "from src.lcu import *\n",
-    "from src.lsu import *"
+    "from src import *"
    ]
   },
   {
@@ -38,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "81aeaf93",
    "metadata": {},
    "outputs": [
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "80e63aef",
    "metadata": {},
    "outputs": [
@@ -97,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "fce7b90d",
    "metadata": {},
    "outputs": [
@@ -124,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "30718751",
    "metadata": {},
    "outputs": [
@@ -158,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "5d24b2de",
    "metadata": {},
    "outputs": [
@@ -168,7 +156,7 @@
      "text": [
       "No loading, storing, or shuffling taking place\n",
       "Performing ALU operation SADD between operands R0 and ONE\n",
-      "Writing ALU result to LCU register 1\n"
+      "Writing ALU result to LSU register 1\n"
      ]
     }
    ],
@@ -184,19 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "ac681a9c",
+   "execution_count": 27,
+   "id": "f6ff5533",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "set_kernel_params() got an unexpected keyword argument 'pos'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11528/234986810.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create a new kernel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mimem_pos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mlsu_imem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_kernel_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrf_wsel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrf_we\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malu_op\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLSU_ALU_OPS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSRL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmuxb_sel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLSU_MUXA_SEL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mR5\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmuxa_sel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLSU_MUXB_SEL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTWO\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvwr_shuf_op\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSHUFFLE_SEL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCONCAT_BITREV_UPPER\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvwr_shuf_sel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLSU_OP_MODE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSHUFFLE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mimem_pos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Hex representation: \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlsu_imem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_word_in_hex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimem_pos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlsu_imem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_instruction_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimem_pos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: set_kernel_params() got an unexpected keyword argument 'pos'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hex representation: 0xe5aea\n",
+      "Shuffling VWR A and B data into VWR C using operation CONCAT_BITREV_UPPER\n",
+      "Performing ALU operation SRL between operands TWO and R5\n",
+      "Writing ALU result to LSU register 2\n"
      ]
     }
    ],
@@ -209,9 +196,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db17868e",
+   "metadata": {},
+   "source": [
+    "### Multiplexer Control Unit IMEM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ad4d6311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not writing to VWRs\n",
+      "Not writing to the SRF\n",
+      "Performing ALU operation LOR between operands SRF and ZERO\n",
+      "Writing ALU result to MXCU register 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load an existing imem word and decode it\n",
+    "imem_pos = 1\n",
+    "imem_word = 0x44e8080\n",
+    "\n",
+    "mxcu_imem = MXCU_IMEM()\n",
+    "mxcu_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "mxcu_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "51783f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing to VWR rows [1 2 3] of VWR_B\n",
+      "Writing from LCU ALU to SRF register 3\n",
+      "Performing ALU operation SADD between operands TWO and R0\n",
+      "No MXCU registers are being written\n"
+     ]
+    }
+   ],
+   "source": [
+    "imem_pos = 2\n",
+    "vwr_row_we = [1, 1, 1, 0]\n",
+    "vwr_sel = MXCU_VWR_SEL.VWR_B.value\n",
+    "srf_sel = 3\n",
+    "alu_srf_write = ALU_SRF_WRITE.MXCU.value \n",
+    "srf_we = 1\n",
+    "rf_wsel = 0 \n",
+    "rf_we = 0 \n",
+    "alu_op =  MXCU_ALU_OPS.SADD.value\n",
+    "muxb_sel = MXCU_MUXB_SEL.R0\n",
+    "muxa_sel = MXCU_MUXA_SEL.TWO\n",
+    "mxcu_imem.set_kernel_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, imem_pos)\n",
+    "mxcu_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ce11bf",
+   "id": "8c15a98d",
    "metadata": {},
    "outputs": [],
    "source": []
