adding RC instruciton encoding/decoding

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "81aeaf93",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "80e63aef",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "fce7b90d",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "30718751",
    "metadata": {},
    "outputs": [
@@ -129,9 +129,9 @@
     }
    ],
    "source": [
-    "# Create a new kernel\n",
+    "# Create a new instruction\n",
     "imem_pos = 2\n",
-    "lcu_imem.set_kernel_params(imm=3, rf_wsel=2, rf_we=1, alu_op=LCU_ALU_OPS.SADD.value, br_mode=0, muxb_sel=LCU_MUXB_SEL.ONE.value, muxa_sel=LCU_MUXA_SEL.ZERO, pos=imem_pos)\n",
+    "lcu_imem.set_kernel_params(imm=3, rf_wsel=2, rf_we=1, alu_op=LCU_ALU_OPS.SADD, br_mode=0, muxb_sel=LCU_MUXB_SEL.ONE, muxa_sel=LCU_MUXA_SEL.ZERO, pos=imem_pos)\n",
     "print(\"Hex representation: \" + lcu_imem.get_word_in_hex(imem_pos))\n",
     "lcu_imem.get_instruction_info(imem_pos)"
    ]
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "5d24b2de",
    "metadata": {},
    "outputs": [
@@ -172,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f6ff5533",
+   "execution_count": 7,
+   "id": "b20d6387",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "# Create a new kernel\n",
+    "# Create a new instruction\n",
     "imem_pos = 2\n",
     "lsu_imem.set_kernel_params(rf_wsel=2, rf_we=1, alu_op=LSU_ALU_OPS.SRL.value, muxb_sel=LSU_MUXA_SEL.R5.value, muxa_sel=LSU_MUXB_SEL.TWO, vwr_shuf_op=SHUFFLE_SEL.CONCAT_BITREV_UPPER.value, vwr_shuf_sel=LSU_OP_MODE.SHUFFLE.value, pos=imem_pos)\n",
     "print(\"Hex representation: \" + lsu_imem.get_word_in_hex(imem_pos))\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db17868e",
+   "id": "a818bd2a",
    "metadata": {},
    "source": [
     "### Multiplexer Control Unit IMEM"
@@ -205,8 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ad4d6311",
+   "execution_count": 8,
+   "id": "ae1080e5",
    "metadata": {},
    "outputs": [
     {
@@ -214,16 +214,16 @@
      "output_type": "stream",
      "text": [
       "Not writing to VWRs\n",
-      "Not writing to the SRF\n",
-      "Performing ALU operation LOR between operands SRF and ZERO\n",
-      "Writing ALU result to MXCU register 0\n"
+      "Reading from SRF index 6\n",
+      "Performing ALU operation NOP between operands R0 and R0\n",
+      "No MXCU registers are being written\n"
      ]
     }
    ],
    "source": [
     "# Load an existing imem word and decode it\n",
     "imem_pos = 1\n",
-    "imem_word = 0x44e8080\n",
+    "imem_word = 0x180\n",
     "\n",
     "mxcu_imem = MXCU_IMEM()\n",
     "mxcu_imem.set_kernel_word(imem_word, imem_pos)\n",
@@ -232,8 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "51783f2f",
+   "execution_count": 9,
+   "id": "fae8033b",
    "metadata": {},
    "outputs": [
     {
@@ -241,32 +241,99 @@
      "output_type": "stream",
      "text": [
       "Writing to VWR rows [1 2 3] of VWR_B\n",
-      "Writing from LCU ALU to SRF register 3\n",
+      "Writing from MXCU ALU to SRF register 3\n",
       "Performing ALU operation SADD between operands TWO and R0\n",
       "No MXCU registers are being written\n"
      ]
     }
    ],
    "source": [
+    "# Create a new instruction\n",
     "imem_pos = 2\n",
     "vwr_row_we = [1, 1, 1, 0]\n",
     "vwr_sel = MXCU_VWR_SEL.VWR_B.value\n",
     "srf_sel = 3\n",
-    "alu_srf_write = ALU_SRF_WRITE.MXCU.value \n",
+    "alu_srf_write = ALU_SRF_WRITE.MXCU\n",
     "srf_we = 1\n",
     "rf_wsel = 0 \n",
     "rf_we = 0 \n",
-    "alu_op =  MXCU_ALU_OPS.SADD.value\n",
+    "alu_op =  MXCU_ALU_OPS.SADD\n",
     "muxb_sel = MXCU_MUXB_SEL.R0\n",
     "muxa_sel = MXCU_MUXA_SEL.TWO\n",
+    "\n",
     "mxcu_imem.set_kernel_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, imem_pos)\n",
     "mxcu_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e04bb97",
+   "metadata": {},
+   "source": [
+    "### Reconfigurable Cell IMEM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "96b4db72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALU is performing operations with 32-bit precision\n",
+      "Performing ALU operation LOR between operands SRF and ZERO\n",
+      "Writing ALU result to RC register 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load an existing imem word and decode it\n",
+    "imem_pos = 1\n",
+    "imem_word = 0xe923\n",
+    "\n",
+    "rc_imem = RC_IMEM()\n",
+    "rc_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "rc_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "31df5ee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALU is performing operations with 32-bit precision\n",
+      "Output VWR_B if sign flag of RCT == 1, else output VWR_A\n",
+      "Writing ALU result to RC register 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a new instruction\n",
+    "imem_pos = 2\n",
+    "rf_wsel = 1 \n",
+    "rf_we = 1 \n",
+    "muxf_sel = RC_MUXF_SEL.RCT \n",
+    "alu_op =  RC_ALU_OPS.INB_SF_INA\n",
+    "op_mode = 0 #Always keep this to zero; 16-bit mode is not supported yet\n",
+    "muxb_sel =  RC_MUXA_SEL.VWR_A\n",
+    "muxa_sel = RC_MUXA_SEL.VWR_B\n",
+    "\n",
+    "rc_imem.set_kernel_params(rf_wsel, rf_we, muxf_sel, alu_op, op_mode, muxb_sel, muxa_sel, imem_pos)\n",
+    "rc_imem.get_instruction_info(imem_pos)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c15a98d",
+   "id": "b9876575",
    "metadata": {},
    "outputs": [],
    "source": []
