adding IMEM instruction encoding from csv

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -46,7 +46,7 @@
     "kmem_word = 0x802b\n",
     "\n",
     "kmem = KER_CONF()\n",
-    "kmem.set_kernel_word(kmem_word, kmem_pos)\n",
+    "kmem.set_word(kmem_word, kmem_pos)\n",
     "kmem.get_kernel_info(kmem_pos)"
    ]
   },
@@ -70,7 +70,14 @@
    "source": [
     "# Create a new kernel\n",
     "kmem_pos = 2\n",
-    "kmem.set_kernel_params(num_instructions=20, imem_add_start=44, column_usage=3, srf_spm_addres=1, pos=kmem_pos)\n",
+    "\n",
+    "# Kernel configuration parameters\n",
+    "num_instructions=20\n",
+    "imem_add_start=44\n",
+    "column_usage=3\n",
+    "srf_spm_addres=1\n",
+    "\n",
+    "kmem.set_params(num_instructions, imem_add_start, column_usage, srf_spm_addres, kmem_pos)\n",
     "print(\"Hex representation: \" + kmem.get_word_in_hex(kmem_pos))\n",
     "kmem.get_kernel_info(kmem_pos)"
    ]
@@ -93,9 +100,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Immediate value: 8\n",
+      "Immediate value: 0\n",
       "LCU is in loop control mode\n",
-      "Jump to address IMM + R1\n",
+      "Exiting out of kernel\n",
       "No LCU registers are being written\n"
      ]
     }
@@ -103,10 +110,10 @@
    "source": [
     "# Load an existing imem word and decode it\n",
     "imem_pos = 1\n",
-    "imem_word = 0xe5a08\n",
+    "imem_word = 0x1c00\n",
     "\n",
     "lcu_imem = LCU_IMEM()\n",
-    "lcu_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "lcu_imem.set_word(imem_word, imem_pos)\n",
     "lcu_imem.get_instruction_info(imem_pos)"
    ]
   },
@@ -131,7 +138,17 @@
    "source": [
     "# Create a new instruction\n",
     "imem_pos = 2\n",
-    "lcu_imem.set_kernel_params(imm=3, rf_wsel=2, rf_we=1, alu_op=LCU_ALU_OPS.SADD, br_mode=0, muxb_sel=LCU_MUXB_SEL.ONE, muxa_sel=LCU_MUXA_SEL.ZERO, pos=imem_pos)\n",
+    "\n",
+    "# Define instruction parameters\n",
+    "imm=3\n",
+    "rf_wsel=2\n",
+    "rf_we=1\n",
+    "alu_op=LCU_ALU_OPS.SADD\n",
+    "br_mode=0\n",
+    "muxb_sel=LCU_MUXB_SEL.ONE\n",
+    "muxa_sel=LCU_MUXA_SEL.ZERO\n",
+    "\n",
+    "lcu_imem.set_params(imm, rf_wsel, rf_we, alu_op, br_mode, muxb_sel, muxa_sel, imem_pos)\n",
     "print(\"Hex representation: \" + lcu_imem.get_word_in_hex(imem_pos))\n",
     "lcu_imem.get_instruction_info(imem_pos)"
    ]
@@ -166,14 +183,14 @@
     "imem_word = 0x539\n",
     "\n",
     "lsu_imem = LSU_IMEM()\n",
-    "lsu_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "lsu_imem.set_word(imem_word, imem_pos)\n",
     "lsu_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b20d6387",
+   "id": "78afaf37",
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +207,24 @@
    "source": [
     "# Create a new instruction\n",
     "imem_pos = 2\n",
-    "lsu_imem.set_kernel_params(rf_wsel=2, rf_we=1, alu_op=LSU_ALU_OPS.SRL.value, muxb_sel=LSU_MUXA_SEL.R5.value, muxa_sel=LSU_MUXB_SEL.TWO, vwr_shuf_op=SHUFFLE_SEL.CONCAT_BITREV_UPPER.value, vwr_shuf_sel=LSU_OP_MODE.SHUFFLE.value, pos=imem_pos)\n",
+    "\n",
+    "# Define instruction parameters\n",
+    "rf_wsel=2\n",
+    "rf_we=1\n",
+    "alu_op=LSU_ALU_OPS.SRL\n",
+    "muxb_sel=LSU_MUXA_SEL.R5\n",
+    "muxa_sel=LSU_MUXB_SEL.TWO\n",
+    "vwr_shuf_op=SHUFFLE_SEL.CONCAT_BITREV_UPPER\n",
+    "vwr_shuf_sel=LSU_OP_MODE.SHUFFLE\n",
+    "\n",
+    "lsu_imem.set_params(rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, vwr_shuf_op, vwr_shuf_sel, imem_pos)\n",
     "print(\"Hex representation: \" + lsu_imem.get_word_in_hex(imem_pos))\n",
     "lsu_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a818bd2a",
+   "id": "a41b343d",
    "metadata": {},
    "source": [
     "### Multiplexer Control Unit IMEM"
@@ -206,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae1080e5",
+   "id": "6ea64bee",
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +253,14 @@
     "imem_word = 0x180\n",
     "\n",
     "mxcu_imem = MXCU_IMEM()\n",
-    "mxcu_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "mxcu_imem.set_word(imem_word, imem_pos)\n",
     "mxcu_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fae8033b",
+   "id": "0326b4ee",
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +277,8 @@
    "source": [
     "# Create a new instruction\n",
     "imem_pos = 2\n",
+    "\n",
+    "# Define instruction parameters\n",
     "vwr_row_we = [1, 1, 1, 0]\n",
     "vwr_sel = MXCU_VWR_SEL.VWR_B.value\n",
     "srf_sel = 3\n",
@@ -261,13 +290,13 @@
     "muxb_sel = MXCU_MUXB_SEL.R0\n",
     "muxa_sel = MXCU_MUXA_SEL.TWO\n",
     "\n",
-    "mxcu_imem.set_kernel_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, imem_pos)\n",
+    "mxcu_imem.set_params(vwr_row_we, vwr_sel, srf_sel, alu_srf_write, srf_we, rf_wsel, rf_we, alu_op, muxb_sel, muxa_sel, imem_pos)\n",
     "mxcu_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e04bb97",
+   "id": "5439e7f4",
    "metadata": {},
    "source": [
     "### Reconfigurable Cell IMEM"
@@ -276,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "96b4db72",
+   "id": "5a50c80c",
    "metadata": {},
    "outputs": [
     {
@@ -295,14 +324,14 @@
     "imem_word = 0xe923\n",
     "\n",
     "rc_imem = RC_IMEM()\n",
-    "rc_imem.set_kernel_word(imem_word, imem_pos)\n",
+    "rc_imem.set_word(imem_word, imem_pos)\n",
     "rc_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "31df5ee4",
+   "id": "75574e9f",
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +347,8 @@
    "source": [
     "# Create a new instruction\n",
     "imem_pos = 2\n",
+    "\n",
+    "# Define instruction parameters\n",
     "rf_wsel = 1 \n",
     "rf_we = 1 \n",
     "muxf_sel = RC_MUXF_SEL.RCT \n",
@@ -326,17 +357,186 @@
     "muxb_sel =  RC_MUXA_SEL.VWR_A\n",
     "muxa_sel = RC_MUXA_SEL.VWR_B\n",
     "\n",
-    "rc_imem.set_kernel_params(rf_wsel, rf_we, muxf_sel, alu_op, op_mode, muxb_sel, muxa_sel, imem_pos)\n",
+    "rc_imem.set_params(rf_wsel, rf_we, muxf_sel, alu_op, op_mode, muxb_sel, muxa_sel, imem_pos)\n",
     "rc_imem.get_instruction_info(imem_pos)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d087ab3",
+   "metadata": {},
+   "source": [
+    "## Putting it all together: Instruction memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d4e52b",
+   "metadata": {},
+   "source": [
+    "### Process existing kernel\n",
+    "Load an existing kernel (in the form of an excel sheet where each row is a clock cycle and each column is a specialized slot) and use the simulator to understand what is going on in each element at a given clock cycle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9876575",
+   "execution_count": 12,
+   "id": "8fb1d7bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The instruction memory has 512 entries.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LCU</th>\n",
+       "      <th>LSU</th>\n",
+       "      <th>MXCU</th>\n",
+       "      <th>RC0</th>\n",
+       "      <th>RC1</th>\n",
+       "      <th>RC2</th>\n",
+       "      <th>RC3</th>\n",
+       "      <th>KMEM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x5c49f</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x802b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0x9c500</td>\n",
+       "      <td>0x43d3f</td>\n",
+       "      <td>0x180</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x98fc0</td>\n",
+       "      <td>0x4bd3f</td>\n",
+       "      <td>0x40</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0xf8f43</td>\n",
+       "      <td>0x53c98</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0xb8f80</td>\n",
+       "      <td>0x539</td>\n",
+       "      <td>0x4ce9000</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "      <td>0x0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       LCU      LSU       MXCU  RC0  RC1  RC2  RC3    KMEM\n",
+       "0      0x0  0x5c49f        0x0  0x0  0x0  0x0  0x0  0x802b\n",
+       "1  0x9c500  0x43d3f      0x180  0x0  0x0  0x0  0x0     0x0\n",
+       "2  0x98fc0  0x4bd3f       0x40  0x0  0x0  0x0  0x0     0x0\n",
+       "3  0xf8f43  0x53c98        0x0  0x0  0x0  0x0  0x0     0x0\n",
+       "4  0xb8f80    0x539  0x4ce9000  0x0  0x0  0x0  0x0     0x0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel_path = \"kernels/mf_q64_erosion/\"\n",
+    "df = pd.read_csv(kernel_path + \"instructions.csv\")\n",
+    "print(\"The instruction memory has {0} entries.\".format(len(df)))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f2520aaa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set an IMEM object and load kernel 0\n",
+    "imem = IMEM(df)\n",
+    "imem.load_kernel(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e3a91d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Immediate value: 0\n",
+      "LCU is in loop control mode\n",
+      "Exiting out of kernel\n",
+      "No LCU registers are being written\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make sure that the last kernel value is the exit instruction\n",
+    "n_instr, imem_add, _, _ = imem.kmem.get_params(0)\n",
+    "lcu_instr = imem.lcu_imem.get_instruction_info(n_instr + imem_add)"
+   ]
   }
  ],
  "metadata": {
