adding instruction printing at a given clock cycle

--- a/develop-new-kernel-vwr2a.ipynb
+++ b/develop-new-kernel-vwr2a.ipynb
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "78afaf37",
+   "id": "673b45cb",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41b343d",
+   "id": "4aa4392c",
    "metadata": {},
    "source": [
     "### Multiplexer Control Unit IMEM"
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6ea64bee",
+   "id": "41778210",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0326b4ee",
+   "id": "8d25ddda",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5439e7f4",
+   "id": "cb7c3ea4",
    "metadata": {},
    "source": [
     "### Reconfigurable Cell IMEM"
@@ -305,15 +305,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a50c80c",
+   "id": "a222e214",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALU is performing operations with 32-bit precision\n",
       "Performing ALU operation LOR between operands SRF and ZERO\n",
+      "ALU is performing operations with 32-bit precision\n",
       "Writing ALU result to RC register 1\n"
      ]
     }
@@ -331,14 +331,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "75574e9f",
+   "id": "b9a334d0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALU is performing operations with 32-bit precision\n",
       "Output VWR_B if sign flag of RCT == 1, else output VWR_A\n",
       "Writing ALU result to RC register 1\n"
      ]
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d087ab3",
+   "id": "6cb1a0d9",
    "metadata": {},
    "source": [
     "## Putting it all together: Instruction memory"
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d4e52b",
+   "id": "d55dd3ed",
    "metadata": {},
    "source": [
     "### Process existing kernel\n",
@@ -381,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8fb1d7bf",
+   "id": "dcff511a",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f2520aaa",
+   "id": "6ff1ed6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3a91d2c",
+   "id": "a2760d60",
    "metadata": {},
    "outputs": [
     {
@@ -537,6 +536,58 @@
     "n_instr, imem_add, _, _ = imem.kmem.get_params(0)\n",
     "lcu_instr = imem.lcu_imem.get_instruction_info(n_instr + imem_add)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4b5a7a10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****RC0****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC1****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC2****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****RC3****\n",
+      "No ALU operation\n",
+      "No RC registers are being written\n",
+      "****LSU****\n",
+      "Performing LOAD from SPM to SRF\n",
+      "Performing ALU operation LOR between operands SRF and ZERO\n",
+      "Writing ALU result to LSU register 7\n",
+      "****LCU****\n",
+      "Immediate value: 0\n",
+      "LCU is in loop control mode\n",
+      "No LCU ALU Operation is performed\n",
+      "No LCU registers are being written\n",
+      "****MXCU****\n",
+      "Not writing to VWRs\n",
+      "Reading from SRF index 0\n",
+      "Performing ALU operation NOP between operands R0 and R0\n",
+      "No MXCU registers are being written\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print what's going on at a given clock cycle\n",
+    "imem.get_clock_cycle_summary(clk_cycle=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afda96ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
